--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,14 @@
     "Issuer": "TestIssuer",
     "Audience": "TestAudience",
     "SecretKey": "my secret key for jwt token generation"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "afandyarali391@gmail.com",
+    "SenderName": "project",
+    "Username": "asfandyarali391@gmail.com",
+    "Password": "vafe nhrc xffv tppu"
   }
 
 
