--- a/appsettings.json
+++ b/appsettings.json
@@ -18,10 +18,10 @@
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "SenderEmail": "afandyarali391@gmail.com",
-    "SenderName": "project",
-    "Username": "asfandyarali391@gmail.com",
-    "Password": "vafe nhrc xffv tppu"
+    "SenderEmail": "your email",
+    "SenderName": "your project name",
+    "Username": "",
+    "Password": "Your App password"
   }
 
 
